// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Rating component render with stars correctly 1`] = `
<div
  className="rating"
>
  <span
    className="stars"
    style={
      Object {
        "width": "20.8em",
      }
    }
  />
  <span
    className="test"
  >
    2
  </span>
</div>
`;

exports[`render Rating component render without stars correctly 1`] = `
<span
  className="test"
>
  2
</span>
`;
